--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
-
     healthcheck:
       test: echo srvr | nc zookeeper 2181 || exit 1
       start_period: 10s
@@ -78,6 +77,68 @@ services:
     networks:
       - cdc-bp
     
+  debezium:
+    image: debezium/connect:2.1
+    container_name: debezium
+    hostname: debezium
+    restart: always
+    depends_on:
+      kafka:
+        condition: service_healthy
+      zookeeper:
+        condition: service_healthy
+      control-center:
+        condition: service_healthy
+    ports:
+      - "8083:8083"
+    environment:
+      BOOTSTRAP_SERVERS: kafka:29092
+      CONNECT_REST_ADVERTISED_HOST_NAME: debezium
+      GROUP_ID: 1
+      CONFIG_STORAGE_TOPIC: debezium_config
+      STATUS_STORAGE_TOPIC: debezium_status
+      OFFSET_STORAGE_TOPIC: debezium_offset
+      KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+      VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+      ENABLE_DEBEZIUM_SCRIPTING: "true"
+      # KEY_CONVERTER_SCHEMAS_ENABLE: "false"
+      # VALUE_CONVERTER_SCHEMAS_ENABLE: "false"
+      # CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE: "false"
+      # CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE: "false"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8083 || exit 1"]
+      start_period: 15s
+      interval: 10s
+      timeout: 5s
+      retries: 6
+    networks:
+      - cdc-bp
+
+  debezium-ui:
+    image: debezium/debezium-ui:latest
+    container_name: debezium-ui
+    hostname: debezium-ui
+    restart: always
+    depends_on:
+      debezium:
+        condition: service_healthy
+    ports:
+      - "8081:8080"
+    environment:
+      DEBEZIUM_CONNECT_URL: http://debezium:8083
+      DEBEZIUM_UI_PORT: 8080
+      DEBEZIUM_UI_HOST: debezium-ui
+      DEBEZIUM_UI_API_URL: http://debezium-ui:8080/api/v1
+      KAFKA_CONNECT_URIS: http://debezium:8083
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8080 || exit 1"]
+      start_period: 15s
+      interval: 10s
+      timeout: 5s
+      retries: 6
+    networks:
+      - cdc-bp
+
 networks:
   cdc-bp:
     name: cdc-bp
